# encode-labs-bootcamp-hackathon

./: Cargo.toml  README.md
dummy/: Cargo.toml  README.md
dummy/src/: lib.rs
host/: Cargo.toml  README.md
host/src/: dummy.rs  main.rs
methods/: Cargo.toml  README.md
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
query/: Cargo.toml  README.md
query/src/: main.rs
