[package]
edition = "2021"
name = "query"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {version = "2.0.14", features = ["rustls", "ws"]}
eyre = "0.6.12"
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
